...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Outfit View ControllerMVP-->
        <scene sceneID="eJ7-Xf-pNs">
            <objects>
                <viewController storyboardIdentifier="OutfitViewControllerMVP" id="dQq-5H-qgn" customClass="OutfitViewControllerMVP" customModule="Closet" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="3sn-KE-Pu0">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yRo-bl-NWr">
                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
...
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zne-cF-kVg">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nombre Outfit" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JCR-U6-3RT">
                                                <rect key="frame" x="8" y="16" width="398" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="nameTextfield"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                                <connections>
                                                    <outlet property="delegate" destination="z3N-Za-JVZ" id="Djp-In-L5y"/>
                                                </connections>
                                            </textField>
                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="3VM-gW-fwQ" userLabel="Top View">
                                                <rect key="frame" x="8" y="62" width="398" height="180"/>
                                                <subviews>
                                                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UM6-1R-ZtI">
                                                        <rect key="frame" x="0.0" y="0.0" width="194" height="180"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="pieceTopButton"/>
                                                        <state key="normal" title="Para torso"/>
                                                        <connections>
                                                            <action selector="didSelectTop:" destination="z3N-Za-JVZ" eventType="touchUpInside" id="c2n-h6-Iad"/>
                                                        </connections>
                                                    </button>
                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clothePlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="iPu-2I-xAn">
                                                        <rect key="frame" x="204" y="0.0" width="194" height="180"/>
...
                                            </stackView>
                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="dop-Vh-rSy" userLabel="Trouser View">
                                                <rect key="frame" x="8" y="258" width="398" height="180"/>
                                                <subviews>
                                                    <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c0X-C0-lEp">
                                                        <rect key="frame" x="0.0" y="0.0" width="194" height="180"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="pieceTrouserButton"/>
                                                        <state key="normal" title="Para piernas"/>
                                                        <connections>
                                                            <action selector="didSelectTrouser:" destination="z3N-Za-JVZ" eventType="touchUpInside" id="Rjz-gY-HtC"/>
                                                        </connections>
                                                    </button>
                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clothePlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="g2d-3k-aFf">
...
                                            </stackView>
                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Og3-31-UtT" userLabel="Footwear View">
                                                <rect key="frame" x="8" y="454" width="398" height="180"/>
                                                <subviews>
                                                    <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gpQ-cT-ZZW">
                                                        <rect key="frame" x="0.0" y="0.0" width="194" height="180"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="pieceFootwearButton"/>
                                                        <state key="normal" title="Para pies"/>
                                                        <connections>
                                                            <action selector="disSelectFootwear:" destination="z3N-Za-JVZ" eventType="touchUpInside" id="ON3-qp-YJh"/>
                                                        </connections>
                                                    </button>
                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clothePlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="gMG-QR-Ws8">
...
